--- a/assets/css/style-universities.css
+++ b/assets/css/style-universities.css
@@ -703,7 +703,6 @@ h1, h2, h3 {
 
 .studentlife {
   display: grid;
-  width: 50%;
   height: auto;
   margin-bottom: 2.5vh;
   border-collapse: collapse;
@@ -715,6 +714,14 @@ h1, h2, h3 {
   align-items: center;
   justify-items: center;
   grid-template-areas: 'studentheadline studentheadline studentheadline' 'image1 image2 image3' 'image4 image5 image6';
+}
+
+.studentlife img{
+  transition: transform .2s;
+}
+
+.studentlife img:hover {
+  transform: scale(1.2);
 }
 
 .studentheadline {
@@ -852,34 +859,6 @@ a {
   }
 }
 
-@media only screen and (max-width: 1200px) {
-  .programinfo {
-    padding-top: 2.5vh;
-    padding-bottom: 2.5vh;
-  }
-  .admissionvideo {
-    width: 100%;
-    height: 80%;
-    position: relative;
-  }
-  .admissionvideo iframe {
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    position: absolute;
-  }
-  .countryimage {
-    width: 100%;
-    height: 80%;
-  }
-  .countryimage img {
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-  }
-}
 
 /* ----------------------- Responsiveness - Tablet+ -------------------------- */
 
@@ -1017,6 +996,10 @@ a {
     margin-top: 2.5vh;
     margin-bottom: 2.5vh;
   }
+
+  .studentlife img:hover {
+    transform: none;
+  }  
 }
 
 /* ----------------------- Responsiveness - Tablet -------------------------- */
