--- a/assets/css/service.css
+++ b/assets/css/service.css
@@ -480,7 +480,12 @@ footer {
     color: white;
     font-size: 1vw;
 }
-
+footer p {
+    font-size: 1vw;
+}
+footer h4{
+    font-size: 1vw;
+}
 .footer-content {
     display: flex;
     width: 60%;
@@ -624,16 +629,19 @@ a {
         margin-top: 15%;
         margin-left: 40%;
     }
-    /* .contact-button {
-        margin-top: 20px;
-    } */
+    footer p{
+        font-size: 1.2vw;
+    }
+    footer h4 {
+        font-size: 1.2vw;
+    }
     @media only screen and (max-width: 715px) {
         footer {
             margin-top: 0px;
             font-size: 1.5vw;
         }
         .footer-content {
-            width: 75%;
+            width: 60%;
         }
         .service-tab {
             margin-left: -80px;
@@ -654,16 +662,6 @@ a {
             font-size: 16px;
             margin-top: 20px;
         }
-        /* .topnav {
-            margin-top: -7%;
-        }
-        #logo {
-            width: 35px;
-            margin-top: 15px;
-        }
-        .navbar-links li a {
-            font-size: 2vw;
-        } */
         .grid-service-intro {
             margin-top: 10%;
         }
@@ -690,12 +688,15 @@ a {
     }
     /* ---------------Mobile Version------------- */
     @media only screen and (max-width: 600px) {
-        footer {
+        footer p{
             margin-top: 0px;
-            font-size: 2.3vw;
+            font-size: 1.5vw;
+        }
+        footer h4 {
+            font-size: 1.5vw;
         }
         .footer-content {
-            width: 100%;
+            width: 60%;
         }
         .main-picture img {
             display: none;
