--- a/assets/css/style-universities.css
+++ b/assets/css/style-universities.css
@@ -772,8 +772,7 @@ footer h4 {
 
 footer p {
   margin-left: 20px;
-  margin-top: 40px;
-  font-size: 16px;
+  font-size: 1vw;
 }
 
 footer {
@@ -824,30 +823,22 @@ a {
   color: white;
 }
 
-@media only screen and (max-width: 960px) {
-  footer p {
-    font-size: 15px;
-  }
-}
-
-@media only screen and (max-width: 830px) {
-  footer h4 {
-    font-size: 16px;
-  }
-  footer p {
-    font-size: 14px;
-  }
-}
 
 @media only screen and (max-width: 715px) {
   footer p {
-    font-size: 12px;
+    font-size: 1.2vw;
+  }
+  footer h4 {
+    font-size: 1.2vw;
   }
 }
 
-@media only screen and (max-width: 460px) {
+@media only screen and (max-width: 600px) {
   footer h4 {
-    font-size: 10px;
+    font-size: 1.5vw;
+  }
+  footer p {
+    font-size: 1.5vw;
   }
 }
 
