--- a/assets/css/service.css
+++ b/assets/css/service.css
@@ -529,6 +529,11 @@ a {
 /* -----------------Responsive----------------- */
 
 @media only screen and (max-width: 1024px) {
+
+    .service-intro p {
+        font-size: 1.3vw;
+    }
+
     .tabcontent {
         width: 90%;
         height: 990px;
@@ -667,6 +672,11 @@ a {
         }
     }
     @media only screen and (max-width: 670px) {
+
+        .service-intro p {
+            font-size: 2vw;
+        }    
+
         .tab {
             width: 60%;
             height: 770px;
