--- a/assets/css/style-contact.css
+++ b/assets/css/style-contact.css
@@ -27,6 +27,9 @@ body {
   border-radius: 7px;
   box-shadow: 0 5px rgba(48, 48, 48, 0.23);
   outline: none;
+  margin-left: 2px;
+}
+#footerbtn {
   margin-left: 17px;
 }
 
